# Vc

./: .travis.yml
avx/: math.h  vectorhelper.h
common/: simdarray.h  simdarrayhelper.h
include/Vc/: vector.h
scalar/: math.h
sse/: vector.h  vectorhelper.h
tests/: CMakeLists.txt  math.cpp  sfinae.cpp
